added checker if no one wins

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="buttons">
             <button id="previous-button">Prev</button>
             <button id="next-button">Next</button>
+        </div>
+        <div class='reset-div'>
+
             <button id="reset-button">Reset</button>
         </div>
     </div>
