--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="intro">
+        <div class="title">
+            <h1>Choose your side</h1>
+        </div>
+
+        <div class="buttons-div">
+            <button class="button" id='x-button'>X</button>
+            <button class="button" id='o-button'>O</button>
+
+        </div>
+
+    </div>
+    <div class="container hide">
         <div class="title">
             <h1>Tic Tac Toe</h1>
             <h2 id='win-label'></h2>
